@@ -1,0 +1,22 @@
+package org.violetmoon.quark.mixin.mixins;
+
+import net.minecraft.core.BlockPos;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.util.RandomSource;
+import net.minecraft.world.level.block.state.BlockBehaviour;
+import net.minecraft.world.level.block.state.BlockState;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.injection.At;
+import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
+
+/**
+ * Exists to be subclassed by LadderBlockMixin basically
+ */
+@Mixin(BlockBehaviour.class)
+public class BlockBehaviourMixin {
+	@Inject(method = "tick", at = @At("HEAD"))
+	public void quark$tick(BlockState pState, ServerLevel pLevel, BlockPos pPos, RandomSource pRandom, CallbackInfo ci) {
+
+	}
+}
